# concurrencpp

./: .gitignore  README.md
cmake/: coroutineOptions.cmake
example/: CMakeLists.txt
example/async_file_processing/source/: main.cpp
example/process_monitor/include/: mock_process_monitor.h
example/process_monitor/source/: mock_process_monitor.cpp
example/synchronous_web_socket/source/: mock_web_socket.cpp
include/concurrencpp/executors/: executor.h  inline_executor.h  manual_executor.h  thread_executor.h  thread_pool_executor.h  worker_thread_executor.h
include/concurrencpp/results/: promises.h  result_awaitable.h  result_core.h  result_fwd_declerations.h  when_result.h
include/concurrencpp/runtime/: constants.h  runtime.h
include/concurrencpp/threads/: thread.h
include/concurrencpp/timers/: timer.h  timer_queue.h
sandbox/: CMakeLists.txt
source/executors/: manual_executor.cpp  thread_executor.cpp  thread_pool_executor.cpp  worker_thread_executor.cpp
source/results/: promises.cpp  result_core.cpp
source/runtime/: runtime.cpp
source/threads/: thread.cpp
source/timers/: timer.cpp
test/include/helpers/: object_observer.h  thread_helpers.h
test/include/tests/test_utils/: result_factory.h  test_executors.h
test/source/helpers/: object_observer.cpp
test/source/tests/: runtime_tests.cpp
test/source/tests/coroutine_tests/: coroutines_tests.cpp
test/source/tests/executor_tests/: inline_executor_tests.cpp  (+4 more)
test/source/thread_sanitizer/: executors.cpp  matrix_multiplication.cpp  result.cpp  when_all.cpp  when_any.cpp
(+7 files in other folders)
